language/move-lang/tests/move_check/borrows/mutate_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:12:17 ───
    │
 13 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    ·
 12 │         let f = x;
    │                 - It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:17:17 ───
    │
 18 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    ·
 17 │         let f = freeze(x);
    │                 --------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:22:17 ───
    │
 23 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    ·
 22 │         let f = id(x);
    │                 ----- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_full_invalid.move:27:17 ───
    │
 28 │         *x = 0;
    │         ^^^^^^ Invalid mutation of reference.
    ·
 27 │         let f = id_mut(x);
    │                 --------- It is still being mutably borrowed by this reference
    │

